Prevent crash when using getExtension while a PBO is bound.

BUG=641643
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2291753002
Cr-Commit-Position: refs/heads/master@{#415547}

Former-commit-id: 803bcd7befd6a191578a8752ff82cd2bcddd7e1f